--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -218,6 +218,8 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, G, exec, $menu
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, exec, firefox
+bind = $mainMod, V, exec, obsidian
+bind = $mainMod, H, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -275,6 +277,18 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Screenshot
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $mainMod, K, exec, hyprshot -m region
+
+
+
+
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -290,6 +304,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
+windowrulev2 = float, workspace:4
+
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
